# pyannote-audio

./: .gitignore  2026-04-07-pyannote.audio에서 VAD 최소 의존성 추출.md  check_weight.py  load_audio.py  pyproject.toml  test.ipynb  vad_test.py
.claude/: settings.json
src/pyannote/audio/: __init__.py
src/pyannote/audio/core/: inference.py  io.py  model.py  pipeline.py  task.py
src/pyannote/audio/models/segmentation/: PyanNet.py  __init__.py
src/pyannote/audio/pipelines/: __init__.py  voice_activity_detection.py
src/pyannote/audio/pipelines/utils/: __init__.py  getter.py
src/pyannote/audio/utils/: powerset.py  receptive_field.py  signal.py
src/pyannote/core/: __init__.py  notebook.py
