[project]
name = "pyannote-compact"
version = "4.0.4.post1"
description = "Minimal extraction from pyannote.audio/.core"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.10,<2.11",
    "torchaudio>=2.10,<2.11",
    "numpy",
    "scipy",
    "einops",
    "asteroid-filterbanks",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
