[project]
name = "pyannote-compact"
version = "4.0.4.post1"
description = "Minimal extraction from pyannote.audio/.core"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.10,<2.11",
    "torchaudio>=2.10,<2.11",
    "numpy",
    "scipy",
    "einops",
    "asteroid-filterbanks",
    "sortedcontainers>=2.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
]
