[project]
name = "pyannote-audio"
version = "4.0.4.post1"
description = "Minimal extraction from pyannote.audio"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.10,<2.11",
    "torchaudio>=2.10,<2.11",
    "numpy",
    "scipy",
    "einops",
    "asteroid-filterbanks",
    "sortedcontainers>=2.4.0",
    "pyannote-core",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pyannote-core = { git = "https://github.com/objects76/pyannote-core.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
]
